--- a/javacc/src/main/resources/templates/CharStream.template
+++ b/javacc/src/main/resources/templates/CharStream.template
@@ -13,7 +13,7 @@
  * operation.
  */
 
-${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}interface CharStream { 
+${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}interface CharStream {
   /**
    * Returns the next character from the selected input.  The method
    * of selecting the input is the responsibility of the class
@@ -58,7 +58,7 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}interface CharStream {
    * All characters must remain in the buffer between two successive calls
    * to this method to implement backup correctly.
    */
-  char BeginToken() throws java.io.IOException;
+  char beginToken() throws java.io.IOException;
 
   /**
    * Returns a string made up of characters from the marked token beginning
@@ -66,7 +66,7 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}interface CharStream {
    * anything that they want to. For example, for efficiency, one might decide
    * to just return null, which is a valid implementation.
    */
-  String GetImage();
+  String getImage();
 
   /**
    * Returns an array of characters that make up the suffix of length 'len' for
@@ -75,11 +75,11 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}interface CharStream {
    * implementation of this is as follows :
    *
    *   {
-   *      String t = GetImage();
+   *      String t = getImage();
    *      return t.substring(t.length() - len, t.length()).toCharArray();
    *   }
    */
-  char[] GetSuffix(int len);
+  char[] getSuffix(int len);
 
   /**
    * The lexer calls this function to indicate that it is done with the stream
@@ -87,5 +87,5 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}interface CharStream {
    * Again, the body of this function can be just empty and it will not
    * affect the lexer's operation.
    */
-  void Done();
+  void done();
 }
